packages/kotlin/ttrp-frontend/src/test/resources/negative/fail-003-absorbs.ttrp
container a target polars """sql
select 1
"""
container h target polars on failure of a absorbs """sql
select 2
"""
